redesigned cart page fixed loading screen and close button overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -53,12 +53,12 @@ button {
     }
   }
   .loading {
-    position: absolute;
+    position: fixed;
     z-index: -1;
     width: 100dvw;
-    height: calc(100dvh - 70px);
+    height: 100dvh;
+    top: 0;
     max-width: 100%;
-    max-height: 100%;
     background-color: black;
     display: grid;
     place-items: center;
@@ -88,7 +88,7 @@ button {
           opacity: 0.2;
           color: white;
           transition: opacity 0.3s;
-          &:hover {
+          &:active {
             opacity: 1;
           }
           &:nth-child(1) {
@@ -185,7 +185,7 @@ button {
       padding: 20px;
       .close {
         position: absolute;
-        left: 100%;
+        display: none;
       }
       h2 {
         margin-bottom: 20px;
@@ -204,8 +204,8 @@ button {
     }
   }
   .cart {
-    padding-top: 120px;
-
+    min-height: 100dvh;
+    padding-top: 80px;
     .empty {
       margin: 0 auto;
       width: 300px;
@@ -220,72 +220,122 @@ button {
         border-radius: 20px;
       }
     }
+    h1 {
+      text-align: center;
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid;
+    }
     .container {
-      width: 700px;
+      width: min(600px, 90dvw);
+      outline: 1px solid black;
+      border-radius: 10px;
       margin: 0 auto;
-      padding: 20px;
-      h1 {
-        margin-bottom: 10px;
-      }
-      table {
-        width: 100%;
-        border: 1px solid;
-        border-collapse: collapse;
-        th,
-        td {
-          padding: 20px;
-          border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      gap: 10px;
+      .product {
+        padding: 10px;
+        gap: 0px 10px;
+        height: 100px;
+        display: grid;
+        grid-template-columns: 80px 1fr 30px;
+        grid-template-rows: 30px 30px;
+        grid-template-areas:
+          "image title q"
+          "image price q";
+        justify-items: center;
+        align-items: center;
+        align-content: center;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        .image {
+          grid-area: image;
+          width: 70px;
+          height: 70px;
+          border: 1px solid;
+          border-radius: 50%;
+          background-size: cover;
+
+          background-repeat: no-repeat;
         }
-        td:nth-child(1),
-        th:nth-child(1) {
-          max-width: 300px;
+        h3 {
+          position: relative;
+          grid-area: title;
+          width: 100%;
+          height: 100%;
+          overflow: scroll;
+          text-wrap: nowrap;
         }
-        th {
-          background-color: #000;
-          color: white;
+        h3::-webkit-scrollbar {
+          display: none;
         }
-        td {
-          padding-top: 30px;
+        .quantity::before {
+          content: "";
+          position: absolute;
+          height: 100%;
+          width: 40px;
+          background: linear-gradient(90deg, transparent, white);
+          right: 30px;
         }
-        .item_div {
+        p {
+          grid-area: price;
+          justify-self: start;
+        }
+        .quantity {
+          position: relative;
+          grid-area: q;
           display: flex;
+          flex-direction: column;
           align-items: center;
-          gap: 20px;
-          img {
-            width: 50px;
-            height: 50px;
-          }
-        }
-        .total_price {
-          margin: auto;
-          width: 80%;
-          font-size: 15px;
-          border: 1px solid black;
-          gap: 10px;
-          height: 30px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          p {
-            width: 20px;
-            text-align: center;
-          }
+          gap: 5px;
+          border: 1px solid;
+          overflow: hidden;
           button {
-            svg {
-              font-size: 20px;
-              color: white;
-              background-color: black;
-              padding: 5px;
-            }
+            color: white;
+            background: black;
+            padding: 5px;
           }
         }
-        tr:nth-last-child(1) {
-          td {
-            background-color: black;
-            color: white;
-            text-align: right;
-            padding: 20px 10px;
-          }
+      }
+      .total {
+        position: fixed;
+        width: min(600px, 90dvw);
+        bottom: 20px;
+        left: 50%;
+        transform: translate(-50%);
+        display: flex;
+        align-items: center;
+        background-color: #000;
+        color: white;
+        padding: 20px 20px;
+        border-radius: 10px;
+
+        h2 {
+          flex: 1;
+        }
+        p {
+          position: relative;
+          padding: 0 10px;
+        }
+        p::before {
+          content: "";
+          position: absolute;
+          height: 100%;
+          width: 1px;
+          left: 0;
+          background-color: white;
+        }
+      }
+    }
+  }
+}
+@media (hover: hover) {
+  #root {
+    .home {
+      .carousel {
+        button:hover {
+          opacity: 1;
         }
       }
     }
@@ -318,6 +368,7 @@ button {
         transition: transform 0.5s;
         .close {
           position: absolute;
+          display: block;
           top: 20px;
           left: 10px;
           font-size: 35px;
